PR22186, divide-by-zero in decode_line_info

PR 22186
	* dwarf2.c (decode_line_info): Fail on lh.line_range of zero
	rather than dividing by zero.